@@ -16,8 +16,6 @@ input[type=reset]{font-size: 12px;padding: 2px;margin-top: 5px;border: 1px solid
 a img{border:none}
 a{outline:none}
 
-.widget-container .searchform {float: none;}
-
 .pagination {
 clear:both;
 padding:2px 0;
@@ -141,6 +139,7 @@ header {margin-top: 15px;}
 #nav ul li:hover ul li a{width:150px;padding:0 14px}
 #nav ul ul li:hover ul li a{width:150px;padding:0 14px;background-color:#888}
 #nav ul ul ul li:hover ul li a{width:150px;padding:0 14px;background-color:#aaa}
+#nav .children {z-index: 4000;}
 
 
 /* Home Button */
@@ -329,6 +328,8 @@ ol, ul {list-style-position: inside;margin-left: 21px;}
 #sidebar240 .widget-container td {padding-right: 1px;}
 
 #sidebar240 .widget-container th {padding-right: 18px}
+
+.widget-container .searchform {float: none;}
 
 .widget-title{font-size:18px;color:#444;text-shadow:none;padding:3px;border-radius:4px 4px 0 0;-moz-border-radius:4px 4px 0 0;margin: 0 -10px 0 -10px;padding: 2px 10px 2px 10px;border-bottom: 1px solid #aaa;background: #f8f8f8;/* Old browsers */background: -moz-linear-gradient(top,  #f8f8f8 0%, #ededed 40%, #dddddd 100%); /* FF3.6+ */background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(40%,#ededed), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */background: -webkit-linear-gradient(top,  #f8f8f8 0%,#ededed 40%,#dddddd 100%); /* Chrome10+,Safari5.1+ */background: -o-linear-gradient(top,  #f8f8f8 0%,#ededed 40%,#dddddd 100%); /* Opera 11.10+ */background: -ms-linear-gradient(top,  #f8f8f8 0%,#ededed 40%,#dddddd 100%); /* IE10+ */background: linear-gradient(top,  #f8f8f8 0%,#ededed 40%,#dddddd 100%); /* W3C */filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f8f8', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */}
 .widget-container ul{padding-top:10px; margin-left: 0px;}
@@ -714,20 +715,4 @@ table,
 address,
 fieldset,
 figure {
-}
-
-
-/* Tabs */
-
-.ifeature-tabbed-header li {
-	float: left;
-	padding: 5px;
-}
-
-.ifeature-tabbed-tab {
-	clear: both;
-}
-
-.ui-tabs-hide {
-	display: none;
 }
